cambios html en Views

--- a/AspAccesos/Views/Home/About.cshtml
+++ b/AspAccesos/Views/Home/About.cshtml
@@ -1,7 +1,15 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "Acerca De";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
-
-<p>Use this area to provide additional information.</p>
+<div style="margin-top:30px">
+    <strong>
+        Pagina Desarrollada por Jose Sequeiros joven Analista de sistemas y programador.
+    </strong><br />
+    <br />
+    <p>Datos de Contacto: </p>
+    <p><a href="Josewsq101@gmail.com">Correo Electronico</a></p>
+    <p><a href="http://www.linkedin.com/in/jose-sequeiros-0a372b21a">Linkedin</a></p>
+    <p><a href="https://github.com/JosephGengar">GitHub</a></p>
+</div>
