agregando login parte html mas accesos y jquery

--- a/AspAccesos/Views/Home/Index.cshtml
+++ b/AspAccesos/Views/Home/Index.cshtml
@@ -5,7 +5,12 @@
 <div class="jumbotron">
     <h1>Pagina de Accesos Personales</h1><br />
     <p class="lead">Este proyecto te permite agregar una coleccion de usuarios y contraseñas que utilizas cotidianamente en tu dia a dia, tambien podras modifcar cada item y eliminarlo.</p><br /><br />
+    <p>Debes Iniciar una Sesion para poder acceder a la informacion personal: </p>
+    <p><a href="@Url.Content("~/User/Index")" class="btn btn-success btn-lg">Inicia Sesion &raquo;</a></p><br /><br /><br />
+
     <p>Tecnologias utilizadas: Asp.Net, Javascript, Jquery, Bootstrap, C#, Net Core.</p>
-    <p>para ver el codigo toca el boton: </p><p><a href="https://github.com/JosephGengar/Accesos-con-Asp" class="btn btn-primary btn-lg">ir a GitHub &raquo;</a></p>
+    <p>Para ver el codigo toca el boton: </p><p><a href="https://github.com/JosephGengar/Accesos-con-Asp" class="btn btn-primary btn-lg">ir a GitHub &raquo;</a></p><br />
+
+
 </div>
 
