html con helpers concluido para agregar usuario

--- a/AspAccesos/Views/Registros/Index.cshtml
+++ b/AspAccesos/Views/Registros/Index.cshtml
@@ -11,7 +11,7 @@
 
 <div class="row" style="margin-top:25px">
     <div class="col-md-12">
-        <input type="button" name="agregar" value="Agregar Registro" class="btn btn-primary"/>
+        <input type="button" name="agregar" value="Agregar Registro" class="btn btn-primary" onclick="document.location.href='@Url.Content("~/Registros/Agregar")'"/>
     </div>
 </div><br />
 
